Update link for Practica 2 in index.html

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <td width="80%">
                     <ul >
                         <li><a href="/home/izaansgar/Documentos/Html/curriculum.html">Curriculum</a></li>
-                        <li><a href="">Practica 2</a></li>
+                        <li><a href="">/home/izaansgar/Documentos/Html/izananson.github.io/5_paginas/index.html</a></li>
                     </ul>
                 </td>
                 <td width="10%">
