Update links in index.html

--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
                 </td>   
                 <td width="80%">
                     <ul >
-                        <li><a href="/home/izaansgar/Documentos/Html/curriculum.html">Curriculum</a></li>
-                        <li><a href="">/home/izaansgar/Documentos/Html/izananson.github.io/5_paginas/index.html</a></li>
+                        <li><a href="Curriculum/curriculum2.html">Curriculum</a></li>
+                        <li><a href="5_paginas/inddex.html</a></li>
                     </ul>
                 </td>
                 <td width="10%">
