Fix link path for curriculum in index.html

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 </td>   
                 <td width="80%">
                     <ul >
-                        <li><a href="Curriculum/curriculum2.html">Curriculum</a></li>
+                        <li><a href="curriculum/curriculum2.html">Curriculum</a></li>
                         <li><a href="5_paginas/inddex.html</a></li>
                     </ul>
                 </td>
