Fix typo in link to index.html

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <td width="80%">
                     <ul >
                         <li><a href="curriculum/curriculum2.html">Curriculum</a></li>
-                        <li><a href="5_paginas/inddex.html</a></li>
+                        <li><a href="5_paginas/index.html</a></li>
                     </ul>
                 </td>
                 <td width="10%">
