Add links for Practica 2 and Ud 4.1 in index.html

--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
                     <ul >
                         <li><a href="curriculum/curriculum2.html">Curriculum</a></li>
                         <li><a href="5_paginas/index.html">Practica 1></a></li>
+                        <li><a href="practica2/index.html">Practica 2></a></li>
+                        <li><a href="Ej4/index.html">Ud 4.1></a></li>
                     </ul>
                 </td>
                 <td width="10%">
