Add link to Practica 5.1 in index.html

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
                         <li><a href="5_paginas/index.html">Practica 1></a></li>
                         <li><a href="practica2/index.html">Practica 2></a></li>
                         <li><a href="Ej4/index.html">Ud 4.1></a></li>
+                        <li><a href="float/index.html">Practica 5.1></a></li>
                     </ul>
                 </td>
                 <td width="10%">
